--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -4,7 +4,7 @@
 <header class="jumbotron" style="background-color:#A9F16C">
   <div class="container">
     <div class="row">
-      <h1>It works Laurentiu!</h1>
+      <h1>It works Serica!</h1>
       <p></p>
     </div>
   </div>
